# py-dm-beginner-en

./: .algokit.toml  .devcontainer.json  LICENSE  README.md  py-dm-beginner-en.code-workspace
.algokit/: .copier-answers.yml
.github/workflows/: py-dm-beginner-en-cd.yaml  py-dm-beginner-en-ci.yaml  py-dm-beginner-en-contracts-cd.yaml  py-dm-beginner-en-contracts-ci.yaml  release.yaml  (+3 more)
projects/py-dm-beginner-en/: .algokit.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
projects/py-dm-beginner-en/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: contract.py.j2  deploy_config.py.j2
projects/py-dm-beginner-en/.algokit/sources/: sources.avm.json
projects/py-dm-beginner-en/.algokit/sources/DigitalMarketplace/: approval.teal  approval.teal.tok.map  clear.teal  clear.teal.tok.map
projects/py-dm-beginner-en/.github/workflows/: cd.yaml  checks.yaml
projects/py-dm-beginner-en/.tours/: getting-started-with-your-algokit-project.tour
projects/py-dm-beginner-en/smart_contracts/: README.md  __main__.py  config.py
projects/py-dm-beginner-en/smart_contracts/artifacts/digital_marketplace/: DigitalMarketplace.approval.teal  DigitalMarketplace.arc32.json  DigitalMarketplace.clear.teal  application.json  client.py  contract.approval.teal  contract.clear.teal
projects/py-dm-beginner-en/smart_contracts/digital_marketplace/: contract.py  deploy_config.py
projects/py-dm-beginner-en/smart_contracts/helpers/: build.py  util.py
projects/py-dm-beginner-en/tests/: conftest.py  digital_marketplace_test.py
(+28 files in other folders)
